--- a/requirements_unix.txt
+++ b/requirements_unix.txt
@@ -1,4 +1,8 @@
-torch 
-torchvision
-torchaudio 
+# Torch recently changed default version to 2.0 which requires CUDA 12.0+
+# As such, we'll need an extra wheel argument for unix in order to install Torch 1.x with CUDA access.
+# The GPU machine we are using has CUDA 11.6 installed, we will use that.
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch==1.13.1+cu116
+torchvision==0.14.1+cu116
+torchaudio ==0.13.1
 -r requirements.txt
